<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical">

    <include
        android:id="@+id/vLtBaseCodeSelecting"
        layout="@layout/view_base_code_selecting"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:elevation="@dimen/dp_2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/converter"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_32"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_24"
                android:orientation="horizontal">

                <TextView
                    style="@style/DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated" />

                <TextView
                    android:id="@+id/vTvTimeLastUpdateUtc"
                    style="@style/DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    tools:text="2021-01-01 00:00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_18"
                android:orientation="horizontal">

                <TextView
                    style="@style/DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_update" />

                <TextView
                    android:id="@+id/vTvTimeNextUpdateUtc"
                    style="@style/DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    tools:text="2021-01-01 00:00" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vRvCurrencyCardList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/dark_blue"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingTop="@dimen/dp_14"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_currency_card" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/vConvertingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/dp_14"
            android:backgroundTint="@color/orange"
            app:srcCompat="@drawable/ic_exchange" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>